# cookiecutter-azure-poetry

./: .gitignore  README.md  contributing.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_gen_project.py
{{cookiecutter.project_name}}/: .dockerignore  Dockerfile  README.md  README.rst  azure-pipelines.yml  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_name}}/docs/: conf.py  index.rst  usage.rst
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  exc.py  logger.py  settings.py
